<resources>
    <string name="app_name">Data Merge app</string>
    <string name="product_name">Jalapeño Nacho Bean Chips</string>
    <string name="product_description_title">Description</string>
    <string name="product_ingredients_title">Ingredients</string>
    <string name="product_content_ipsum">Bacon ipsum dolor amet rump shankle sausage turkey salami jerky hamburger tail corned beef. Drumstick spare ribs tri-tip, doner beef pastrami pork jerky shoulder boudin. Hamburger landjaeger cow shank sirloin, rump pig. Ground round picanha ham hock shank cow. Ball tip cow spare ribs short loin pancetta cupim. Pork chop beef ribs cupim leberkas doner kevin strip steak.</string>
    <string name="btn_add_to_cart">Add to cart</string>
    <string name="product_availability">Availability: </string>
    <string name="out_of_stock">Out of stock!</string>
    <string name="notify_product_in_stock">Notify me when this product is in stock.</string>
    <string name="email">Email:</string>
    <string name="btn_notify">Notify</string>
    <string name="notify_error">Please enter a valid email.</string>
    <string name="notify_email">We will notify you at %s</string>
</resources>
