<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewState"
            type="com.example.datamerge.presentation.product_detail.viewstate.ProductOutOfStockViewState" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/product_availability"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_out_of_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/out_of_stock"
            android:textColor="@color/red"
            app:layout_constraintStart_toEndOf="@+id/tv_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:text="@{ viewState.notifyText }"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="@string/notify_product_in_stock" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/email"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_notify" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toEndOf="@+id/tv_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_notify" />

        <Button
            android:id="@+id/btn_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{ viewState::onClick}"
            android:text="@string/btn_notify"
            app:layout_constraintStart_toEndOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_notify" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>